<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authorTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pagesTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorTextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pagesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pages"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAddGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_genre_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagesTextInput"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/genreList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonAddGenre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Lorem Ipsum bla bla"
        android:layout_margin="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/summaryTextInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:boxBackgroundColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genreList"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/summaryText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/summary"
            android:inputType="text"
            android:gravity="top"
            android:lines="8"
            android:maxLines="10"
            android:minLines="8" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>